[gd_scene load_steps=3 format=3 uid="uid://ctseyns1gq4vj"]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Btn_ItemSelect.gd" id="1"]
[ext_resource type="Theme" uid="uid://bo3gu4nrkb880" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_25.tres" id="2"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(212, 39)
offset_right = 212.0
offset_bottom = 39.0
size_flags_horizontal = 3
theme = ExtResource("2")
action_mode = 0
alignment = 0
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -14.5
offset_right = 106.0
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
text = "Test Key"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_layout_mode = 1

[node name="DisplayLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -13.0
offset_right = 134.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Test Key"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
metadata/_edit_layout_mode = 1

[connection signal="button_up" from="." to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
